--- a/Periodicka_tabulka-test/style.css
+++ b/Periodicka_tabulka-test/style.css
@@ -2,15 +2,30 @@
     border: 1px solid black;
     background-color: rgb(255,129,129);
 }
+.kovy_alkalickych_zemin {
+    border: 1px solid black;
+    background-color: rgb(255,192,0);
+}
+.prechodne_kovy {
+    border: 1px solid black;
+    background-color: rgb(225,195,255);
+}
 .kovy {
     border: 1px solid black;
     background-color: rgb(153,204,255)
+}
+.polokovy {
+    border: 1px solid black;
+    background-color: rgb(204,255,255)
 }
 .nekovy {
     border: 1px solid black;
     background-color: rgb(175,241,103)
 }
-
+.halogeny {
+    border: 1px solid black;
+    background-color: rgb(0,204,255)
+}
 .vzacne_plyny {
     border: 1px solid black;
     background-color: rgb(255,255,0)
