--- a/Periodicka_tabulka-test/style.css
+++ b/Periodicka_tabulka-test/style.css
@@ -1,3 +1,6 @@
+table {
+    border-collapse: collapse;
+}
 .alkalicke_kovy {
     border: 1px solid black;
     background-color: rgb(255,129,129);
