--- a/Periodicka_tabulka-test/style.css
+++ b/Periodicka_tabulka-test/style.css
@@ -1,6 +1,9 @@
 table {
-    border-collapse: collapse;
+    border-collapse: collapse; /* Sloučení čar pro čistotu */
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
 }
+
 .alkalicke_kovy {
     border: 1px solid black;
     background-color: rgb(255,129,129);
@@ -33,6 +36,23 @@ table {
     border: 1px solid black;
     background-color: rgb(255,255,0)
 }
+.ostatni {
+    border: 1px solid black;
+}
 .prazdne {
     empty-cells: hide;
+    border: none;
+}
+
+.alkalicke_kovy, .kovy_alkalickych_zemin, .prechodne_kovy, 
+.kovy, .polokovy, .nekovy, .halogeny, .vzacne_plyny, .ostatni, .prazdne {
+    width: 80px;
+    height: 50px;
+    text-align: center;
+    padding: 10px;
+}
+
+h1 {
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
 }
